# AI_football_game_analysis

./: .gitignore  README.md  pyproject.toml
src/: main.py  yolo_inference.py
src/analysis/: color_assignment.ipynb
src/camera_movement_estimator/: camera_movement_estimator.py
src/player_ball_assigner/: player_ball_assigner.py
src/speed_and_distance_estimator/: speed_and_distance_estimator.py
src/stubs/: track_stubs.pkl
src/team_assigner/: team_assigner.py
src/trackers/: tracker.py
src/training/: football_training_yolo.ipynb
src/utils/: bbox_utils.py  video_utils.py
src/view_transformer/: view_transformer.py
